ver 0.18.1 (2013/11/??)
* filter:
  - autoconvert: fix "volume_normalization" with mp3 files
* add missing files to source tarball

ver 0.18 (2013/10/31)
* configuration:
  - allow tilde paths for socket
  - default filesystem charset is UTF-8 instead of ISO-8859-1
  - increase default buffer size to 4 MB
* protocol:
  - new command "readcomments" lists arbitrary file tags
  - new command "toggleoutput"
  - "find"/"search" with "any" does not match file name
  - "search" and "find" with base URI (keyword "base")
  - search for album artist falls back to the artist tag
  - re-add the "volume" command
* input:
  - curl: enable https
  - soup: plugin removed
* playlist:
  - lastfm: remove defunct Last.fm support
* decoder:
  - adplug: new decoder plugin using libadplug
  - dsf: don't play junk at the end of the "data" chunk
  - ffmpeg: drop support for pre-0.8 ffmpeg
  - flac: require libFLAC 1.2 or newer
  - flac: support FLAC files inside archives
  - opus: new decoder plugin for the Opus codec
  - vorbis: skip 16 bit quantisation, provide float samples
  - mikmod: add "loop" configuration parameter
  - modplug: add "loop_count" configuration parameter
  - mp4ff: obsolete plugin removed
* encoder:
  - opus: new encoder plugin for the Opus codec
  - vorbis: accept floating point input samples
* output:
  - new option "tags" may be used to disable sending tags to output
  - alsa: workaround for noise after manual song change
  - ffado: remove broken plugin
  - httpd: support HEAD requests
  - mvp: remove obsolete plugin
  - osx: disabled by default because it's unmaintained and unsupported
* improved decoder/output error reporting
* eliminate timer wakeup on idle MPD
* fix unresponsive MPD while waiting for stream
* port of the source code to C++11

ver 0.17.6 (2013/10/14)
* mixer:
  - alsa: fix busy loop when USB sound device gets unplugged
* decoder:
  - modplug: fix build with Debian package 1:0.8.8.4-4
* stored playlists: