@@ -1,4 +1,6 @@
 ver 0.18.1 (2013/11/??)
+* protocol:
+  - always ignore whitespace at the end of the line
 * filter:
   - autoconvert: fix "volume_normalization" with mp3 files
 * add missing files to source tarball
